--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ eyre = "0.6.8"
 color-eyre = "0.6.1"
 ureq = "2.4.0"
 chrono = { version = "0.4.19",  features = [ "serde" ] }
+thiserror = "1.0.30"
+derive_more = "0.99.17"
