--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ ureq = "2.4.0"
 chrono = { version = "0.4.19",  features = [ "serde" ] }
 thiserror = "1.0.30"
 derive_more = "0.99.17"
+strum = {version = "0.24.0", features = ["derive"]}
