--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ chrono = { version = "0.4.19",  features = [ "serde" ] }
 thiserror = "1.0.30"
 derive_more = "0.99.17"
 strum = {version = "0.24.0", features = ["derive"]}
+redis = "0.21.5"
+lazy_static = "1.4.0"
