--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ path = "lib/newsapp.rs"
 
 [dependencies]
 eyre = "0.6.8"
-color-eyre = "0.6.1"
 
 serde_json = "1.0.79"
 thiserror = "1.0.30"
@@ -28,18 +27,14 @@ strum   = { version = "0.24.0",  features = ["derive"] }
 ureq    = { version = "2.4.0", optional = true }
 redis   = { version = "0.21.5", optional = true }
 reqwest = { version = "0.11.10", features = ["json"], optional = true }
+clap    = { version = "3.1.8", features = ["derive"], optional = true }
 
 [dev-dependencies]
 tokio = { version = "1.17.0", features = ["full"]  }
 
 [features]
-default = [ "cache", "net_async" ]
-net_async = [
-  "reqwest"
-]
-cache = [
-  "redis"
-]
-net_block = [
-  "ureq"
-]
+default = [ "cache", "net_async", "derive_clap" ]
+net_async = [ "reqwest" ]
+cache = [ "redis" ]
+net_block = [ "ureq" ]
+derive_clap = [ "clap" ]
