--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.19"
+clap = { version = "3.1.8", features = ["derive"] }
 colour = "0.6.0"
-newsapp = { path = "../" }
+newsapp = { path = "../", features = ["derive_clap", "cache", "net_async"] }
 tokio = { version = "1.17.0", features = ["full"], optional = true }
 
 
