--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,12 +7,9 @@ edition = "2021"
 chrono = "0.4.19"
 clap = { version = "3.1.8", features = ["derive"] }
 colour = "0.6.0"
-newsapp = { path = "../", features = ["derive_clap", "cache", "net_async"] }
-tokio = { version = "1.17.0", features = ["full"], optional = true }
+newsapp = { path = "../", features = ["derive_clap", "cache"] }
 
 
-[features]
-default = [ "tokio" ]
 # cache = [
 #   "newsapp/cache"
 # ]
