--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -11,5 +11,6 @@ serde = { version = "1.0.136", features = ["derive"] }
 tracing = "0.1.32"
 tracing-subscriber = "0.3.10"
 newsapp = { path = "../" }
-poll-promise = { version = "0.1.0", features = ["tokio"] }
-tokio = { version = "1.17.0", features = ["full"] }
+strum   = { version = "0.24.0",  features = ["derive"] }
+poll-promise = { version = "0.1.0", features = [] }
+
