--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,19 +22,19 @@ thiserror = "1.0.30"
 derive_more = "0.99.17"
 lazy_static = "1.4.0"
 
-serde   = { version = "1.0.136", features = ["derive"] }
-chrono  = { version = "0.4.19",  features = ["serde"]  }
-strum   = { version = "0.24.0",  features = ["derive"] }
-ureq    = { version = "2.4.0", optional = true }
-redis   = { version = "0.21.5", optional = true }
-reqwest = { version = "0.11.10", features = ["json"], optional = true }
-clap    = { version = "3.1.8", features = ["derive"], optional = true }
+serde        = { version = "1.0.136", features = ["derive"] }
+chrono       = { version = "0.4.19",  features = ["serde"]  }
+strum        = { version = "0.24.0",  features = ["derive"] }
+ureq         = { version = "2.4.0",   optional = true }
+redis        = { version = "0.21.5",  optional = true }
+reqwest      = { version = "0.11.10", features = ["json"], optional = true }
+clap         = { version = "3.1.8",   features = ["derive"], optional = true }
 
 [dev-dependencies]
 tokio = { version = "1.17.0", features = ["full"]  }
 
 [features]
-default = [ "cache", "net_block" ]
+default = [  ]
 net_async = [ "reqwest" ]
 cache = [ "redis" ]
 net_block = [ "ureq" ]
