--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ ureq         = { version = "2.4.0",   optional = true }
 redis        = { version = "0.21.5",  optional = true }
 reqwest      = { version = "0.11.10", features = ["json"], optional = true }
 clap         = { version = "3.1.8",   features = ["derive"], optional = true }
+eframe       = { version = "0.17.0",  optional = true }
+poll-promise = { version = "0.1.0",   optional = true }
 
 [dev-dependencies]
 tokio = { version = "1.17.0", features = ["full"]  }
@@ -39,3 +41,4 @@ net_async = [ "reqwest" ]
 cache = [ "redis" ]
 net_block = [ "ureq" ]
 derive_clap = [ "clap" ]
+egui = [ "eframe", "poll-promise", "net_block" ]
