--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -10,7 +10,7 @@ eframe = "0.17.0"
 serde = { version = "1.0.136", features = ["derive"] }
 tracing = "0.1.32"
 tracing-subscriber = "0.3.10"
-newsapp = { path = "../" }
+newsapp = { path = "../", features = ["egui", "cache"] }
 strum   = { version = "0.24.0",  features = ["derive"] }
 poll-promise = { version = "0.1.0", features = [] }
 
