--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 
 [dependencies]
-confy = "0.4.0"
-eframe = "0.17.0"
-serde = { version = "1.0.136", features = ["derive"] }
-tracing = "0.1.32"
-tracing-subscriber = "0.3.10"
-newsapp = { path = "../", features = ["egui", "cache"] }
-strum   = { version = "0.24.0",  features = ["derive"] }
+eframe       = { version = "0.17.0" }
+serde        = { version = "1.0.136", features = ["derive"] }
+newsapp      = { path = "../", features = ["egui", "cache"] }
+strum        = { version = "0.24.0",  features = ["derive"] }
 poll-promise = { version = "0.1.0", features = [] }
 
+confy = "0.4.0"
+tracing = "0.1.32"
+tracing-subscriber = "0.3.10"
