--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "newsapi_cli"
+name = "headlines_cli"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,4 +7,4 @@ edition = "2021"
 chrono = "0.4.19"
 clap = { version = "3.1.8", features = ["derive"] }
 colour = "0.6.0"
-newsapp = { path = "../", features = ["derive_clap", "cache", "net_block"] }
+headlines = { path = "../", features = ["derive_clap", "cache", "net_block"] }
