--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "newsapp_ui"
+name = "headlines_app"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 eframe       = { version = "0.17.0" }
 serde        = { version = "1.0.136", features = ["derive"] }
-newsapp      = { path = "../", features = ["egui", "cache"] }
+headlines      = { path = "../", features = ["egui", "cache"] }
 strum        = { version = "0.24.0",  features = ["derive"] }
 poll-promise = { version = "0.1.0", features = [] }
 
