--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 
 [lib]
 name = "headlines"
-path = "lib/export.rs"
+path = "lib/mod.rs"
 
 [dependencies]
 eyre = "0.6.8"
@@ -31,6 +31,8 @@ reqwest      = { version = "0.11.10", features = ["json"], optional = true }
 clap         = { version = "3.1.8",   features = ["derive"], optional = true }
 eframe       = { version = "0.17.0",  optional = true }
 poll-promise = { version = "0.1.0",   optional = true }
+colour       = { version = "0.6.0",   optional = true }
+
 
 [dev-dependencies]
 tokio = { version = "1.17.0", features = ["full"]  }
@@ -40,5 +42,5 @@ default = [  ]
 net_async = [ "reqwest" ]
 cache = [ "redis" ]
 net_block = [ "ureq" ]
-derive_clap = [ "clap" ]
 egui = [ "eframe", "poll-promise", "net_block" ]
+cli = [ "colour", "clap" ]
