--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -14,3 +14,5 @@ poll-promise = { version = "0.1.0", features = [] }
 confy = "0.4.0"
 tracing = "0.1.32"
 tracing-subscriber = "0.3.10"
+rgba_simple = "0.6.0"
+paste = "1.0.7"
