--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,8 +11,9 @@ serde        = { version = "1.0.136", features = ["derive"] }
 headlines      = { path = "../", features = ["egui", "cache"] }
 strum        = { version = "0.24.0",  features = ["derive"] }
 poll-promise = { version = "0.1.0", features = [] }
+confy        = { git = "https://github.com/rust-cli/confy", features = ["yaml_conf"], default-features = false }
 
-confy = "0.4.0"
+
 tracing = "0.1.32"
 tracing-subscriber = "0.3.10"
 rgba_simple = "0.6.0"
