--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -8,7 +8,7 @@ description = "Experimental NewsApi UI client with egui"
 [dependencies]
 eframe       = { version = "0.17.0" }
 serde        = { version = "1.0.136", features = ["derive"] }
-headlines      = { path = "../", features = ["egui", "cache"] }
+headlines    = { path = "../", features = ["egui", "cache"] }
 strum        = { version = "0.24.0",  features = ["derive"] }
 poll-promise = { version = "0.1.0", features = [] }
 confy        = { git = "https://github.com/rust-cli/confy", features = ["yaml_conf"], default-features = false }
@@ -18,6 +18,7 @@ tracing = "0.1.32"
 tracing-subscriber = "0.3.10"
 rgba_simple = "0.6.0"
 paste = "1.0.7"
+crossbeam-channel = "0.5.4"
 
 [package.metadata.bundle]
 name = "Headlines"
